# metaprogramming-examples

./: .gitignore  README.md
1-C/: main.c  run.sh
2-Rust/: Cargo.toml
2-Rust/src/: main.rs
3-Python/: main.py
4-Cpp/constexpr/: CMakeLists.txt  main.cpp
4-Cpp/reflection/: CMakeLists.txt  main.cpp  run.sh
4-Cpp/templates/: CMakeLists.txt  main.cpp
4-Odin/: main.odin
5-Cpp/reflection/: main.cpp
5-Cpp/templates/: main.cpp  run.sh
5-Zig/: main.zig
6-Odin/: main.odin
7-Lisp/: main.lisp
